feat: add POST /vehicles/{NAME}/commAdapter/position API endpoint
Adds a new web API endpoint that allows setting or resetting the loopback
position of a vehicle by name, mirroring the position control available
in the KernelControlCenter vehicle driver panel.

- POST /vehicles/{NAME}/commAdapter/position?newValue=<pointName>
  Sets the vehicle's loopback position to the named point, or resets it
  when newValue is null/blank.
- Also fixes pre-existing SonarQube issues in VehicleHandler and
  V1RequestHandler (duplicate literals, cognitive complexity, unused
  imports, superfluous thrown exceptions, log argument evaluation).

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>